# eXLang

./: .ccls  .dir-locals.el  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build.sh  learning.txt  main.cpp  meson.build  modules.txt  platformio.ini  rebuild.sh  requirements.txt  syntax_check.py  uploader.py
docker/: Dockerfile  emacs
include/: cmd_analog.hpp  cmd_digital.hpp  cmd_interrupts.hpp  cmd_math.hpp  cmd_system.hpp  cmd_variable.hpp  command.hpp  constants.hpp  eeprom_access.hpp  helpers.hpp  macros.hpp  memory.hpp  meson.build  program.hpp  statement.hpp
include/exlang/: cmd_analog.hpp  cmd_digital.hpp  cmd_interrupts.hpp  cmd_log.hpp  cmd_logic.hpp  cmd_math.hpp  cmd_navigate.hpp  cmd_serial.hpp  cmd_system.hpp  cmd_time.hpp  cmd_variable.hpp  command.hpp  constants.hpp  cpp_time.hpp  dev_disk.hpp  dev_network.hpp  eeprom_access.hpp  error.hpp  helpers.hpp  interpreter.hpp  macros.hpp  memory.hpp  program.hpp  statement.hpp
lib/modules/src/: disk.cpp  disk.hpp  meson.build  network.hpp
samples/: 01_bench.sh  01_fibonacci.exl  01_fibonacci.py  02_prime.exl  02_prime.py  03_rand.exl  04_array.exl  04_array_2.exl  05_directory.exl  06_filerops.exl  07_append.exl  blink.exl  exlang  hello_world.exl
src/: CMakeLists.txt  cmd_analog.cpp  cmd_digital.cpp  cmd_interrupts.cpp  cmd_log.cpp  cmd_logic.cpp  cmd_math.cpp  cmd_navigate.cpp  cmd_serial.cpp  cmd_system.cpp  cmd_time.cpp  cmd_variable.cpp  command.cpp  constants.cpp  dev_disk.cpp  eeprom_access.cpp  error.cpp  helpers.cpp  interpreter.cpp  main.cpp  memory.cpp  meson.build  program.cpp  statement.cpp
