install_headers('cmd_analog.hpp',
                'cmd_digital.hpp',
                'cmd_interrupts.hpp',
                'cmd_log.hpp',
                'cmd_logic.hpp',
                'cmd_math.hpp',
                'cmd_navigate.hpp',
                'cmd_serial.hpp',
                'cmd_system.hpp',
                'cmd_time.hpp',
                'cmd_variable.hpp',
                'command.hpp',
                'constants.hpp',
                'cpp_time.hpp',
                'error.hpp',
                'helpers.hpp',
                'interpreter.hpp',
                'macros.hpp',
                'memory.hpp',
                'program.hpp',
                'statement.hpp')
