exlang_sources = ['cmd_analog.cpp',
                  'cmd_digital.cpp',
                  'cmd_interrupts.cpp',
                  'cmd_log.cpp',
                  'cmd_logic.cpp',
                  'cmd_math.cpp',
                  'cmd_navigate.cpp',
                  'cmd_serial.cpp',
                  'cmd_system.cpp',
                  'cmd_time.cpp',
                  'cmd_variable.cpp',
                  'command.cpp',
                  'constants.cpp',
                  'error.cpp',
                  'helpers.cpp',
                  'interpreter.cpp',
                  'memory.cpp',
                  'program.cpp',
                  'statement.cpp']
exlang_lib = static_library('exlang',
                            exlang_sources,
                            include_directories: inc,
                            install: true)
